modified title and favicon, repaired images not showing in lonely component, little css changes for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,9 @@
   right: 33.5%;
   background-color: white;
 }
+@media (max-width: 40rem) {
+  .App {
+    width: 100%;
+    min-height: 100vh;
+  }
+}
