--- a/src/components/lonely/lonely.styles.scss
+++ b/src/components/lonely/lonely.styles.scss
@@ -54,7 +54,7 @@
     justify-content: center;
     align-items: center;
     border-bottom: 10px solid white;
-    margin-bottom: 15px;
+
     
     .LikedPersonImage {
       width: 100px;
